<resources>
    <string name="app_name">Spot It!</string>
    <string name="help_description">Each round you will be presented with 2 cards. On the top card click
        on the image that corresponds with the bottom one, keep going until the game ends</string>
    <string name="help_title">Help</string>
    <string name="menu_options_btn">Options</string>
    <string name="menu_help_btn">Help</string>
    <string name="menu_title">Main Menu</string>
    <string name="menu_play_btn">Play</string>
    <string name="options_title">Select set of images</string>
    <string name="winfragment_text">You Won!</string>
    <string name="high_scores">High Scores</string>
    <string name="high_scores_title">High Scores</string>
    <string name="reset">Reset</string>
    <string name="enter_a_username">Enter a username:</string>
    <string name="on">\ on \</string>
    <string name="secondsby">\ Seconds by \</string>
    <string name="seconds">\ Seconds \</string>
    <string name="lastscore">\Last Score: \</string>
    <string name="Resource_text">Images taken from Dr. Fraser\'s Gallery of Images</string>
    <string name="link_gallery">https://opencoursehub.cs.sfu.ca/bfraser/solutions/276/images/ImageGallery/</string>
    <string name="finish_click_here_to_see_highscores">Click here to see highscores</string>
    <string name="finish_return_to_main_menu">Return to main menu</string>
    <string name="username_save">Save</string>
    <string name="welcome_skip">Skip</string>
    <string name="welcome_to_spot_it">Welcome to Spot-it!</string>
    <string name="welcome_creators">This app has been designed by Rafael, Pritpal, Parsa and Subaig.</string>
    <string name="menu_flickrbtn">Flickr</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>
    <string name="Images_Per_Card">images per card</string>
    <string name="Cards">cards</string>
    <string name="All">all</string>
    <string name="saved_images_flickr_string">Saved Images</string>
    <string name="select_the_number_of_images_per_card">Select the number of images per card</string>
    <string name="select_draw_pile_size">Select draw pile size</string>
    <string name="title_activity_saved_images">ScrollingActivity</string>
    <string name="image_download_url">https://picsum.photos/200/300/?random</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete all</string>
    <string name="created_at">Created At:</string>
    <string name="options">Options</string>
    <string name="imageonly">Images only</string>
    <string name="imageandtext">Images and Text</string>
    <string name="numcurrentsaved">\"Num of current saved images = \"</string>
    <string name="warning1">Warning: You must save atleast 7 images to select flickr mode with 3 images per card</string>
    <string name="warning2">Warning: You must save atleast 13 images to select flickr mode with 4 images per card</string>
    <string name="warning3">Warning: You must save atleast 31 images to select flickr mode with 6 images per card</string>
    <string name="savedimages">Saved Images</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="Flickr_and_Local">Flickr and local gallery</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
