<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="#A4C639"
tools:context=".HelpScreen">

    <TextView
        android:id="@+id/helptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="40dp"
        android:shadowColor="#000000"
        android:shadowDx="4.0"
        android:shadowDy="3.0"
        android:shadowRadius="1.0"
        android:text="@string/help_title"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helptext"
        android:layout_width="377dp"
        android:layout_height="146dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:shadowColor="#000000"
        android:shadowDx="4.0"
        android:shadowDy="3.0"
        android:shadowRadius="1.0"
        android:text="@string/help_description"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helptitle" />

    <TextView
        android:id="@+id/textViewResources"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="16dp"
        android:shadowColor="#000000"
        android:shadowDx="4.0"
        android:shadowDy="3.0"
        android:shadowRadius="1.0"
        android:text="@string/Resource_text"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helptext" />

    <TextView
        android:id="@+id/textView_ResourcesLink"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:textColor="#FFFFFF"
        android:text="@string/link_gallery"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResources" />

</androidx.constraintlayout.widget.ConstraintLayout>