<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4C639"
    tools:context=".OptionsScreen">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="168dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:shadowColor="#000000"
        android:shadowDx="4"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:text="Choose Gamemode"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DrawPileSize" />

    <TextView
        android:id="@+id/settingtext"
        android:layout_width="174dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:shadowColor="#000000"
        android:shadowDx="4.0"
        android:shadowDy="3.0"
        android:shadowRadius="1.0"
        android:text="@string/options_title"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/diffsettings" />

    <RadioGroup
        android:id="@+id/NumImagesPerCard"
        android:layout_width="142dp"
        android:layout_height="116dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="168dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:shadowColor="#000000"
        android:shadowDx="4"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:text="@string/select_the_number_of_images_per_card"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="191dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:shadowColor="#000000"
        android:shadowDx="4"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:text="@string/select_draw_pile_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumImagesPerCard" />

    <RadioGroup
        android:id="@+id/DrawPileSize"
        android:layout_width="145dp"
        android:layout_height="165dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </RadioGroup>

    <RadioGroup
        android:id="@+id/gamemode"
        android:layout_width="160dp"
        android:layout_height="121dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/warningtext"
        android:layout_width="176dp"
        android:layout_height="69dp"
        android:shadowColor="#000000"
        android:shadowDx="3.0"
        android:shadowDy="2.0"
        android:shadowRadius="1.0"
        android:text="You have saved enough Flickr Images to use them in game"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toEndOf="@+id/gamemode"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/numimages"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:shadowColor="#000000"
        android:shadowDx="3.0"
        android:shadowDy="2.0"
        android:shadowRadius="1.0"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gamemode"
        app:layout_constraintTop_toBottomOf="@+id/warningtext" />

    <RadioGroup
        android:id="@+id/diffsettings"
        android:layout_width="123dp"
        android:layout_height="116dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/settingsdiff"
        app:layout_constraintTop_toBottomOf="@+id/settingsdiff" />

    <TextView
        android:id="@+id/settingsdiff"
        android:layout_width="128dp"
        android:layout_height="21dp"
        android:layout_marginEnd="20dp"
        android:shadowColor="#000000"
        android:shadowDx="4.0"
        android:shadowDy="3.0"
        android:shadowRadius="1.0"
        android:text="Select difficulty"
        android:textColor="#FFFFFF"
        android:textColorLink="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGP"
        android:layout_width="128dp"
        android:layout_height="73dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/settingtext"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/DrawPileSize"
        app:layout_constraintTop_toBottomOf="@+id/settingtext" />

    <RadioGroup
        android:id="@+id/exportsetting"
        android:layout_width="120dp"
        android:layout_height="77dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/warningtext"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="146dp"
        android:layout_height="21dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:shadowColor="#000000"
        android:shadowDx="3.0"
        android:shadowDy="2.0"
        android:shadowRadius="1.0"
        android:text="Export Cards?"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGP" />

    <Button
        android:id="@+id/exportbutton"
        android:layout_width="96dp"
        android:layout_height="59dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="Exported cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="162dp"
        android:layout_height="56dp"
        android:shadowColor="#000000"
        android:shadowDx="3.0"
        android:shadowDy="2.0"
        android:shadowRadius="1.0"
        android:text="Click here to view exported cards from your previously played games"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/exportbutton"
        app:layout_constraintEnd_toStartOf="@+id/exportbutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/exportbutton"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>